feat: 폰트, 사진, 아이콘 등 꾸미기

--- a/posts/test.mdx
+++ b/posts/test.mdx
@@ -1,10 +1,18 @@
-title: 제목
-date: 2023-01-29
-description: 설명
-
+---
+title: 안녕하세요? 저는 제목이에유
+date: 2024-12-24
+description: 안녕하세요? 저는 썸네일 설명이에유
 ---
 
 ## 제목
 
 - 내용 1
 - 내용 2
+
+> 왜안되냥..
+
+# 제목 안돼요
+
+```javascript
+console.log('안녕하세요? 저는 코드블럭이에유');
+```
