feat: 글에 태그 추가

--- a/posts/test2.mdx
+++ b/posts/test2.mdx
@@ -1,7 +1,11 @@
 ---
-title: 안녕하세요? 저는 제목이에유
+title: 안녕하세요? 저는 제목2
 date: 2024-12-24
 description: 안녕하세요? 저는 썸네일 설명이에유
+tags:
+    - 태그1
+    - 태그2
+    - 태그3
 ---
 
 # 제목 이제 된당
