post: 번호 누락 수정

--- a/posts/2-self-review-2023.mdx
+++ b/posts/2-self-review-2023.mdx
@@ -235,7 +235,7 @@ ACC 캡틴을 신청하기 위해서는 지원서를 작성해야했는데, 몇 
 사실, 흔한 자격증이라서 스펙 자체에 큰 도움이 되는 건 아니지만
 개인적으로 힘든 시기에, 하면 된다! 라는 자신감을 채워준 경험이었다.
 
-## 당근 알바팀 체험형 인턴
+## 4. 당근 알바팀 체험형 인턴
 
 우테코를 11월 중순에 마무리하고, 남은 휴학 기간동안 체험형 인턴을 하게 됐다.
 현재 나는 당근 알바팀에서 개발자로서 일하고 있다.
