--- a/documents/notes/3-why-mysql.mdx
+++ b/documents/notes/3-why-mysql.mdx
@@ -4,7 +4,6 @@ date: 2024-02-02
 title: 왜 MySQL인가
 tags:
   - Real MySQL 1
-  - 나는 왜 MySQL을 택했는가
 ---
 
 ## 안녕하세요 MySQL 입니다.
@@ -66,3 +65,11 @@ website mentions, search frequency, technical discussion frequency, current job 
 
 따라서, 위 순위를 봤을 때 MySQL 서버는 충분히 좋은 선택지라고 볼 수 있다.
 게다가 MySQL 서버는 오픈소스(엔터프라이즈도 저비용)인 점에서 상위에 위치한 오라클보다 더 매력적인 선택이 될 수도 있다.
+
+---
+
+1장은 가벼운 내용이었다.
+
+사실 저자가, MySQL을 택해야하는 이유가 안정성이라고 하긴 했지만
+아직 안정성에 대한 자세한 이야기는 나오지 않은 것 같고,
+5.5~5.7 까지 안정성과 성능개선을 위해 노력했다 했으니 이 부분을 궁금해하며 잘 읽어보면 좋을 것 같다.
