post: 리마큐 2장까지

--- a/documents/notes/4-install-mysql.mdx
+++ b/documents/notes/4-install-mysql.mdx
@@ -109,18 +109,7 @@ sudo /usr/local/mysql/support-files/mysql.server stop
 
 이 책에서 살펴보게 될 많은 내용이 이 Configuration file과 관련있으므로 이 설정파일의 경로는 기억해두는 것을 권장했다.
 
-## 리눅스에서는?
+--- 
 
-대부분의 서비스 환경에서는 리눅스 운영체제에서 MySQL 서버를 구동한다.
-
-### 설정파일 및 데이터파일 준비
-
-리눅스 서버에서 yum installer나 rpm을 이용해 설치하면
-MySQL 서버에 필요한 프로그램들과 디렉터리들을 일부 준비되지만
-
-- 트랜잭션 로그파일
-- 시스템 테이블
-
-이 준비되지 않기 때문에 아직 MySQL을 구동할 수 없다.
-
-
+재미있다. 특히 MySQL의 상용화전략을 알게된 것이 재밌었다. 
+그리고 서비스 개발자가 사용할 때 고려할 여러 옵션과 설정값들을 알려줄 것 같아 기대된다.
