--- a/documents/notes/11-saa-diary.mdx
+++ b/documents/notes/11-saa-diary.mdx
@@ -1,8 +1,7 @@
 ---
 id: 9
-title: 일기
+title: 오랜만의 일기
 date: 2023-11-01
-description: SAA후기와 발표에 대한
 tags:
   - Solutions Architect Associate
   - AWS Cloud Clubs
