post: lecture note

--- a/documents/posts/15-broken-window.mdx
+++ b/documents/posts/15-broken-window.mdx
@@ -2,9 +2,9 @@
 id: 15
 title: 깨진 유리창을 그대로 두지 마세요
 date: 2023-05-17
-description: -
+description: Don't live with broken windows
 tags:
-  - 번역
+  - 깨진 유리창이란 말이 어디서 왔을까?
 ---
 
 이 글은 https://www.artima.com/articles/dont-live-with-broken-windows 를 변역기를 활용해 제 맘대로 번역한 글입니다.
