remove duplicate post

--- a/documents/posts/8-gradle-executable-packaging.mdx
+++ b/documents/posts/8-gradle-executable-packaging.mdx
@@ -1,7 +1,7 @@
 ---
 id: 8
 title: spring-boot-gradle plugin의 executable packaging
-date: 2023-08-13
+date: 2023-08-01
 description: 개발자는 이 플러그인 덕분에 jar, war 아카이브를 패키징 할 수 있고, Spring Boot 애플리케이션을 실행할 수 있다.
 tags:
   - bootJar
@@ -34,7 +34,7 @@ plugins {
 
 ## 디팬던시 관리는 다른 플러그인과 함께.
 
-gradle로 spring boot를 이용하는 사람들 대부분이 `[io.spring.dependency-management](https://github.com/spring-gradle-plugins/dependency-management-plugin)` 를 함께 사용한다. 다음과 같은 스크립트를 본적 많을 것이다.
+gradle로 spring boot를 이용하는 사람들 대부분이 [`io.spring.dependency-management`](https://github.com/spring-gradle-plugins/dependency-management-plugin) 를 함께 사용한다. 다음과 같은 스크립트를 본적 많을 것이다.
 
 ```groovy
 plugins {
