--- a/documents/posts/28-solution-two-sum.mdx
+++ b/documents/posts/28-solution-two-sum.mdx
@@ -2,7 +2,7 @@
 id: 28
 title: Array - Two Sum (Easy)
 date: 2024-10-08
-description: Very basic of programming solving
+description: Very basic of problem solving
 tags:
   - Leetcode
   - Step by step
