added more details

--- a/documents/notes/31-til-241207.mdx
+++ b/documents/notes/31-til-241207.mdx
@@ -10,7 +10,18 @@ tags:
 데이터베이스 마이그레이션 관련 해서 이야기를 했는데,
 유즈케이스는 몽고db -> mysql 로 특정 필드를 마이그레이션하는 것이었다.
 
-몽고 DB에는 Change Streams 이라는 기능이 있어서, oplog 라는 변경 로그를 스트림으로 전달받을 수 있다.
+기반은 당연히 시간을 들여 만들어야한다.
+
+얘기 나눈 유즈케이스의 경우 nosql 에서 rdb 로 이전하는 것이기 때문에 rdb 성격에 맞게 테이블을 재셜계하고,
+
+데이터를 옮기는 로직을 애플리케이션으로 구현할 수 있을 것 같다.
+
+그런데 데이터가 많다면 이전 작업을 한번에 끝낼 수는 없을 것이다. 그런 경우 배치를 활용하는데
+문제는 배치가 이미 돌아서 이전이 완료된 데이터에 변경사항이 생기는 경우 어떻게 그 변경을 감지하고 다시 적용하느냐는 것이다.
+
+이런 문제는 많은 데이터베이스에서 제공하는 변경 로그를 활용하면 해결할 수 있다.
+
+특히 몽고 DB에는 Change Streams 이라는 기능이 있어서, oplog 라는 변경 로그를 스트림으로 전달받을 수 있다.
 https://www.mongodb.com/docs/manual/changeStreams/
 
 ## Change Streams
